add fixes to be able to build with all features off

--- a/share/examples/Gui/mesh/CMakeLists.txt
+++ b/share/examples/Gui/mesh/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 include(.sources.cmake)
 add_executable(x_${NAME} ${SOURCES})
 
-target_link_libraries(x_${NAME} Core Gui ${GL_LIBRARIES} qhull)
+target_link_libraries(x_${NAME} Core Gui Ors ${GL_LIBRARIES} qhull)
 
 add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
 
