--- a/share/examples/Perception/videoEncoder/CMakeLists.txt
+++ b/share/examples/Perception/videoEncoder/CMakeLists.txt
@@ -2,9 +2,11 @@ get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
 
 set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
-include(.sources.cmake)
-add_executable(x_${NAME} ${SOURCES})
+if(HAVE_OPENGL)
+  include(.sources.cmake)
+  add_executable(x_${NAME} ${SOURCES})
 
-target_link_libraries(x_${NAME} Ors Gui Core Perception)
+  target_link_libraries(x_${NAME} Ors Gui Core Perception)
 
-add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+  add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+endif(HAVE_OPENGL)
