--- a/share/projects/mlr_ros/CMakeLists.txt
+++ b/share/projects/mlr_ros/CMakeLists.txt
@@ -13,9 +13,9 @@ if(ROSBUILD)
   rosbuild_init()
   # all 
   #set the default path for built executables to the "bin" directory
-  set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
+  set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
   #set the default path for built libraries to the "lib" directory
-  set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+  set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
 
   foreach(DIR ${CURRENT_SLICE})
     add_subdirectory(${DIR})
