--- a/share/src/Optim/Makefile
+++ b/share/src/Optim/Makefile
@@ -4,7 +4,7 @@ OUTPUT := $(BASE)/lib/$(NAME).so
 
 DEPEND = Core
 
-SRCS = $(shell find . -maxdepth 1 -name '*.cpp' )
-OBJS = $(SRCS:%.cpp=%.o)
+SRCS = $(shell find . -maxdepth 1 -name '*.cpp') cmaes.c
+OBJS = $(SRCS:%.cpp=%.o) cmaes.o
 
 include $(BASE)/make-generic
