--- a/share/teaching/RoboticsCourse/06-kalmanSLAM/CMakeLists.txt
+++ b/share/teaching/RoboticsCourse/06-kalmanSLAM/CMakeLists.txt
@@ -1,9 +1,5 @@
 get_filename_component(NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME)
-
-set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
-
-add_executable(${NAME} main.cpp)
-
-target_link_libraries(${NAME} )
-
+include(.sources.cmake)
+add_executable(${NAME} ${SOURCES})
+target_link_libraries(${NAME} Core Ors Gui Gui Algo )
 add_test(${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
