--- a/share/examples/Motion/grasp/CMakeLists.txt
+++ b/share/examples/Motion/grasp/CMakeLists.txt
@@ -6,4 +6,4 @@ add_executable(x_${NAME} ${SOURCES})
 target_link_libraries(x_${NAME} Motion Optim Gui)
 
 add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
-
+file(COPY grasp_mesh.tri MT.cfg schunk_3d schunk.ors schunk.ors.qlin DESTINATION .)
