--- a/share/teaching/AutonomousSystems/e08-OpenCV/CMakeLists.txt
+++ b/share/teaching/AutonomousSystems/e08-OpenCV/CMakeLists.txt
@@ -4,6 +4,6 @@ set(CMAKE_CXX_FLAGS "${MLR_CXX_FLAGS} ${CMAKE_CXX_FLAGS}")
 
 add_executable(${NAME} main.cpp)
 
-target_link_libraries(${NAME} )
+target_link_libraries(${NAME} opencv_core opencv_imgproc opencv_highgui opencv_features2d)
 
 add_test(${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
