--- a/share/examples/Hardware/ueyecamera/CMakeLists.txt
+++ b/share/examples/Hardware/ueyecamera/CMakeLists.txt
@@ -7,7 +7,7 @@ if(UEYE)
 include(.sources.cmake)
 add_executable(x_${NAME} ${SOURCES})
 
-target_link_libraries(x_${NAME} Core Hardware_ueyecamera System Perception)
+target_link_libraries(x_${NAME} Core Hardware_ueyecamera System Perception Gui)
 
 add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
 
