--- a/share/teaching/RoboticsCourse/09-racer/Makefile
+++ b/share/teaching/RoboticsCourse/09-racer/Makefile
@@ -1,7 +1,7 @@
 BASE = ../../..
 
-OBJS = main.o racer.o cmaes.o search_CMA.o
-DEPEND = Ors Core Gui Algo Motion
+OBJS = main.o #racer.o cmaes.o search_CMA.o
+DEPEND = Ors Core Gui Algo Motion Hardware_racer
 
 GL = 1
 
