--- a/.gitignore
+++ b/.gitignore
@@ -81,8 +81,7 @@ orspy.py
 
 
 %% SPECIAL for git/mlr:
-share/gofMake/make-config
-share/gofMake/make-config.mine
+share/gofMake/config.mk*
 share/extern/tony_mdp/parser.tab.cpp
 share/extern/ODE_0.11/download
 share/extern/ODE_0.11/ode-0.11
