removed a makefile, new models

--- a/share/teaching/RoboticsCourse/10-racerRegression/Makefile
+++ b/share/teaching/RoboticsCourse/10-racerRegression/Makefile
@@ -38,22 +38,19 @@ RM = /usr/bin/cmake -E remove -f
 # Escaping for special characters.
 EQUALS = =
 
-# The program to use to edit the cache.
-CMAKE_EDIT_COMMAND = /usr/bin/ccmake
-
 # The top-level source directory on which CMake was run.
-CMAKE_SOURCE_DIR = /home/baiseraa/git/mlr/share
+CMAKE_SOURCE_DIR = /home/bais/git/mlr/share
 
 # The top-level build directory on which CMake was run.
-CMAKE_BINARY_DIR = /home/baiseraa/git/mlr/share
+CMAKE_BINARY_DIR = /home/bais/git/mlr/share
 
 #=============================================================================
 # Targets provided globally by CMake.
 
 # Special rule for the target edit_cache
 edit_cache:
-	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Running CMake cache editor..."
-	/usr/bin/ccmake -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Running interactive CMake command-line interface..."
+	/usr/bin/cmake -i .
 .PHONY : edit_cache
 
 # Special rule for the target edit_cache
@@ -82,14 +79,14 @@ test/fast: test
 
 # The main all target
 all: cmake_check_build_system
-	cd /home/baiseraa/git/mlr/share && $(CMAKE_COMMAND) -E cmake_progress_start /home/baiseraa/git/mlr/share/CMakeFiles /home/baiseraa/git/mlr/share/teaching/RoboticsCourse/10-racerRegression/CMakeFiles/progress.marks
-	cd /home/baiseraa/git/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 teaching/RoboticsCourse/10-racerRegression/all
-	$(CMAKE_COMMAND) -E cmake_progress_start /home/baiseraa/git/mlr/share/CMakeFiles 0
+	cd /home/bais/git/mlr/share && $(CMAKE_COMMAND) -E cmake_progress_start /home/bais/git/mlr/share/CMakeFiles /home/bais/git/mlr/share/teaching/RoboticsCourse/10-racerRegression/CMakeFiles/progress.marks
+	cd /home/bais/git/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 teaching/RoboticsCourse/10-racerRegression/all
+	$(CMAKE_COMMAND) -E cmake_progress_start /home/bais/git/mlr/share/CMakeFiles 0
 .PHONY : all
 
 # The main clean target
 clean:
-	cd /home/baiseraa/git/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 teaching/RoboticsCourse/10-racerRegression/clean
+	cd /home/bais/git/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 teaching/RoboticsCourse/10-racerRegression/clean
 .PHONY : clean
 
 # The main clean target
@@ -98,22 +95,22 @@ clean/fast: clean
 
 # Prepare targets for installation.
 preinstall: all
-	cd /home/baiseraa/git/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 teaching/RoboticsCourse/10-racerRegression/preinstall
+	cd /home/bais/git/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 teaching/RoboticsCourse/10-racerRegression/preinstall
 .PHONY : preinstall
 
 # Prepare targets for installation.
 preinstall/fast:
-	cd /home/baiseraa/git/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 teaching/RoboticsCourse/10-racerRegression/preinstall
+	cd /home/bais/git/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 teaching/RoboticsCourse/10-racerRegression/preinstall
 .PHONY : preinstall/fast
 
 # clear depends
 depend:
-	cd /home/baiseraa/git/mlr/share && $(CMAKE_COMMAND) -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR) --check-build-system CMakeFiles/Makefile.cmake 1
+	cd /home/bais/git/mlr/share && $(CMAKE_COMMAND) -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR) --check-build-system CMakeFiles/Makefile.cmake 1
 .PHONY : depend
 
 # Convenience name for target.
 teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/rule:
-	cd /home/baiseraa/git/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/rule
+	cd /home/bais/git/mlr/share && $(MAKE) -f CMakeFiles/Makefile2 teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/rule
 .PHONY : teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/rule
 
 # Convenience name for target.
@@ -122,7 +119,7 @@ teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/rul
 
 # fast build rule for target.
 10-racerRegression/fast:
-	cd /home/baiseraa/git/mlr/share && $(MAKE) -f teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/build.make teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/build
+	cd /home/bais/git/mlr/share && $(MAKE) -f teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/build.make teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/build
 .PHONY : 10-racerRegression/fast
 
 main.o: main.cpp.o
@@ -130,7 +127,7 @@ main.o: main.cpp.o
 
 # target to build an object file
 main.cpp.o:
-	cd /home/baiseraa/git/mlr/share && $(MAKE) -f teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/build.make teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/main.cpp.o
+	cd /home/bais/git/mlr/share && $(MAKE) -f teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/build.make teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/main.cpp.o
 .PHONY : main.cpp.o
 
 main.i: main.cpp.i
@@ -138,7 +135,7 @@ main.i: main.cpp.i
 
 # target to preprocess a source file
 main.cpp.i:
-	cd /home/baiseraa/git/mlr/share && $(MAKE) -f teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/build.make teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/main.cpp.i
+	cd /home/bais/git/mlr/share && $(MAKE) -f teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/build.make teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/main.cpp.i
 .PHONY : main.cpp.i
 
 main.s: main.cpp.s
@@ -146,7 +143,7 @@ main.s: main.cpp.s
 
 # target to generate assembly for a file
 main.cpp.s:
-	cd /home/baiseraa/git/mlr/share && $(MAKE) -f teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/build.make teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/main.cpp.s
+	cd /home/bais/git/mlr/share && $(MAKE) -f teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/build.make teaching/RoboticsCourse/10-racerRegression/CMakeFiles/10-racerRegression.dir/main.cpp.s
 .PHONY : main.cpp.s
 
 # Help Target
@@ -173,6 +170,6 @@ help:
 # No rule that depends on this can have commands that come from listfiles
 # because they might be regenerated.
 cmake_check_build_system:
-	cd /home/baiseraa/git/mlr/share && $(CMAKE_COMMAND) -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR) --check-build-system CMakeFiles/Makefile.cmake 0
+	cd /home/bais/git/mlr/share && $(CMAKE_COMMAND) -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR) --check-build-system CMakeFiles/Makefile.cmake 0
 .PHONY : cmake_check_build_system
 
