added X264-based video encoder and made ueyecamera code use it

--- a/share/examples/Hardware/ueyecamera/CMakeLists.txt
+++ b/share/examples/Hardware/ueyecamera/CMakeLists.txt
@@ -9,6 +9,9 @@ add_executable(x_${NAME} ${SOURCES})
 
 target_link_libraries(x_${NAME} Core Hardware_ueyecamera System Perception Gui)
 
+file(COPY MT.cfg DESTINATION .)
+
 add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
+
 
 endif(UEYE)
