--- a/share/Makefile.gof
+++ b/share/Makefile.gof
@@ -1,13 +1,13 @@
 BASE = .
 
-target: examples
+target: src
 
 ################################################################################
 
 NAME   = $(shell basename $(PWD))
 
-srcs =  $(shell find src -mindepth 1 -maxdepth 1 -type d -not -name 'extern' )
-srcs += $(shell find src/extern -mindepth 1 -maxdepth 1 -type d)
+srcs =  $(shell find src -mindepth 1 -maxdepth 1 -type d -not -name 'extern' -not -name 'CMakeFiles' -not -name 'retired')
+srcs += $(shell find src/extern -mindepth 1 -maxdepth 1 -type d -not -name 'CMakeFiles')
 exas = $(shell find examples -mindepth 2 -maxdepth 2 -type d -not -name '*py')
 pysrcs = src/Core src/Ors src/Gui src/Motion src/Optim
 
