--- a/share/CMakeLists.txt
+++ b/share/CMakeLists.txt
@@ -141,6 +141,7 @@ include(src/Gui/gl.cmake OPTIONAL)
 message(STATUS "Using OpenGL: ${HAVE_OPENGL}")
 # need the result of this for the examples
 include(src/Hardware/G4/find_G4.cmake OPTIONAL)
+include(src/Hardware/kinect/freenect.cmake OPTIONAL)
 
 # set MT definitions depending on which external libs we have
 find_file(SLICE_EXTERN .slicedef.cmake 
