--- a/share/examples/Motion/pfc/CMakeLists.txt
+++ b/share/examples/Motion/pfc/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable(x_${NAME} ${SOURCES})
 include(FindPkgConfig)
 
 target_link_libraries(x_${NAME} Motion Optim Gui Ors Algo)
+add_definitions(-DMT_GL)
 
 add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
 
