--- a/share/examples/Motion/motion/MT.cfg
+++ b/share/examples/Motion/motion/MT.cfg
@@ -1,10 +1,11 @@
 
 transitionType = 1
 Hrate = 1e-0
-timeSteps = 200
+timeSteps = 100
 duration = 5.
 
 orsFile = test.ors
+orsFile = arm3.ors
 orsFile = ball.ors
 orsFile = world.ors
 
