opengl.cpp fixed for void

--- a/share/Makefile.gof
+++ b/share/Makefile.gof
@@ -6,22 +6,22 @@ target: src
 
 NAME   = $(shell basename $(PWD))
 
-srcs =  $(shell find src -mindepth 1 -maxdepth 1 -type d -not -name 'extern' -not -name 'CMakeFiles' -not -name 'retired')
-srcs += $(shell find src/extern -mindepth 1 -maxdepth 1 -type d -not -name 'CMakeFiles')
-exas = $(shell find examples -mindepth 2 -maxdepth 2 -type d -not -name '*py' -not -name 'CMakeFiles')
-pysrcs = src/Core src/Ors src/Gui src/Motion src/Optim
+src_paths =  $(shell find src -mindepth 1 -maxdepth 1 -type d -not -name 'extern' -not -name 'CMakeFiles' -not -name 'retired')
+src_paths += $(shell find src/extern -mindepth 1 -maxdepth 1 -type d -not -name 'CMakeFiles')
+exa_paths = $(shell find examples -mindepth 2 -maxdepth 2 -type d -not -name '*py' -not -name 'CMakeFiles')
+pysrc_paths = src/Core src/Ors src/Gui src/Motion src/Optim
 
 ################################################################################
 
-all: $(srcs:%=makePath/%) $(exas:%=makePath/%)
+all: $(src_paths:%=makePath/%) $(exa_paths:%=makePath/%)
 
-src: $(srcs:%=makePath/%)
+src: $(src_paths:%=makePath/%)
 
-python: $(srcs:%=makePath/%) $(pysrcs:%=makePythonPath/%)
+python: $(src_paths:%=makePath/%) $(pysrc_paths:%=makePythonPath/%)
 
-examples: $(exas:%=makePath/%)
+examples: $(exa_paths:%=makePath/%)
 
-depend: $(srcs:%=dependPath/%)
+depend: $(src_paths:%=dependPath/%)
 
 clean: force
 	@find $(BASE) -type d -name 'Make.lock' -delete -print
@@ -31,14 +31,14 @@ cleanLocks: force
 	@find $(BASE) -type d -name 'Make.lock' -delete -print
 	@find $(BASE) -type f -name '.lastMake' -delete -print
 
-cleanAll: $(srcs:%=cleanPath/%) $(exas:%=cleanPath/%) cleanLocks
+cleanAll: $(src_paths:%=cleanPath/%) $(exa_paths:%=cleanPath/%) cleanLocks
 
 cleanCmake:
 	@find . -type f \( -name 'CMakeCache.txt' -or -name 'CTestTestfile.cmake' -or -name 'cmake_install.cmake' \) -print -delete
 	@find . -type d \( -name 'CMakeFiles' \) -exec rm -Rf {} \;
 
 inf:
-	@echo "srcs =" $(srcs)
+	@echo "src_paths =" $(src_paths)
 
 ################################################################################
 
