--- a/share/projects/mlr_ros/tcr/CMakeLists.txt
+++ b/share/projects/mlr_ros/tcr/CMakeLists.txt
@@ -6,7 +6,7 @@ include_directories(${CMAKE_SOURCE_DIR}/src)
 if(ROSBUILD)
     include(.sources.cmake)
     rosbuild_add_executable(x_${NAME} ${SOURCES})
-    target_link_libraries(x_${NAME} Ors Core Gui System Motion)
+    target_link_libraries(x_${NAME} Ors Core Gui System Motion devTools)
     add_test(x_${NAME}_test ${NAME} --gtest_output=xml:${NAME}-unit.xml)
     file(COPY ${CMAKE_SOURCE_DIR}/examples/Ors/ors_physx/pin1.off DESTINATION . )
 endif(ROSBUILD)
