--- a/share/examples/Ors/ors_editor/MT.cfg
+++ b/share/examples/Ors/ors_editor/MT.cfg
@@ -1,4 +1,4 @@
-file = pr2_model/pr2-1-org.ors
+file = ../../../data/pr2_model/pr2-3-comfi.ors
 file = pr2_model/pr2_clean_comfi.ors
 file = data/apollo_robot_model/models/zzz.ors
 file = pr2_model/pr2.urdf.ors
