--- a/share/projects/data_recording/g4_data_analysis/MT.cfg
+++ b/share/projects/data_recording/g4_data_analysis/MT.cfg
@@ -1,3 +1,4 @@
-meta = g4Meta.dat
-poses = g4Poses.dat
-shapes = g4Shapes.ors
+data = data/g4data/g4Data.dat
+meta = data/g4data/g4Meta.dat
+poses = data/g4data/g4Poses.dat
+shapes = data/g4data/g4Shapes.ors
